# Rendering
add_subdirectory(Rendering/01-HelloTriangle)


# Physics
add_subdirectory(Physics/Ten_Minute_Physics/10-SoftBodies)
add_subdirectory(Physics/Ten_Minute_Physics/11-SpatialHashing)
add_subdirectory(Physics/Ten_Minute_Physics/12-SoftBodySkinning)
add_subdirectory(Physics/Ten_Minute_Physics/12-SoftBodyOBJ)
